--- a/index.html
+++ b/index.html
@@ -72,6 +72,10 @@
         <div class="message">I love you varisha</div>
         <div class="message">I love you varisha</div>
         <div class="message">I love you varisha</div>
+        <div class="message">I love you varisha</div>
+        <div class="message">I love you varisha</div>
+        <div class="message">I love you varisha</div>
+        <div class="message">I love you varisha</div>
         <!-- You can add as many messages as you want here! -->
     </div>
 </body>
